Added content to the mag project

--- a/index.html
+++ b/index.html
@@ -81,17 +81,19 @@
     </div> -->
     </div>
   </section>
-  <section>
-    <div class="about-sec">
-      <h1>A little bit about me...</h1>
-      <div class="about-content">
-        <img src="./img/giz2.jpg" alt=""> 
+  <section >
+    <div class="about-sec" >
+      <div class="about-content" style="display: flex;">
+        <img src="./img/giz2.jpg" alt="" style="width: auto; margin: 0;">
+        <div style="padding-left: 50px;">
+        <h2 style="margin-top: 0px;">About me</h2>
         <h3> I'm graphic designer located in Texas who loves turning ideas into visuals that grab attention and communicate clearly. 
           I’ve built experience creating magazine layouts, websites, and packaging that align with visual identities and tell compelling stories. 
           For me, everything is a story waiting to be expressed through color, shape, and line. These elements transform information into something visually readable and engaging. 
           My passion for understanding data has led me to pursue education in GIS, combining my design expertise with spatial data to explore new ways of visual storytelling. 
           I’m excited to continue to grow as a person and professional–- and I can’t wait what projects lie ahead. Take a look at my work!
         </h3>
+        </div>
       </div>
     </section>
 <section id="work" class="portfolio-grid">
@@ -158,15 +160,47 @@
       </div>
   </div>
   </footer>
-<div class="case-study-data" id="acadian-case-study">
+<!-- <div class="case-study-data" id="acadian-case-study">
     <h3>Acadian Kitchens: Packaging and Website Redesign</h3>
     <p>This section contains the full problem, solution, and impact narrative...</p>
-    </div>
+</div> -->
 
-<div class="case-study-data" id="mag-case-study">
-    <h3>The Mag: Editorial Design</h3>
-    <p>This is the detailed case study for the Flux magazine layout...</p>
+<div  id="mag-case-study" class="case-study-data"  >
+    <h2>The Mag: Editorial Design</h2>
+    <div style="background-color: rgb(246, 242, 254); text-align: center">
+      <img src="img/Isolated_white_magazine_cover.png" alt="" style="width: 500px;">
     </div>
+    <div> 
+      <h3>About the project</h3>
+      <p>Details about the project. Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, 
+        quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. 
+        Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+
+    </p>
+    </div>
+    <div class="mag-mockup-boc"  >
+      <img src="img/BestofCampus_Flat-Cover-1.png" alt="" style="width: 100%;">
+      <iframe 
+        allowfullscreen="allowfullscreen" 
+        allow="clipboard-write" 
+        scrolling="no" 
+        class="fp-iframe" 
+        src="https://heyzine.com/flip-book/2b682034fc.html" 
+        style="border: 1px solid lightgray; width: 100%; height: 600px;">
+       </iframe>
+    </div>
+    <div>
+      <img src="img/TrendsMag_Flat-Cover-1.png" alt="" style="width: 100%;">
+      <iframe 
+        allowfullscreen="allowfullscreen" 
+        allow="clipboard-write" 
+        scrolling="no" 
+        class="fp-iframe" 
+        style="border: 1px solid lightgray; width: 100%; height: 600px;" 
+        src="https://heyzine.com/flip-book/856595ef6d.html">
+      </iframe>
+    </div>
+</div>
 
 <div id="project-modal" class="modal-wrapper">
     <div class="modal-backdrop"></div> 
