edited card styles

--- a/index.html
+++ b/index.html
@@ -25,117 +25,79 @@
 
 <body>
   <script src="main.js"></script>
-  <!-- <nav id="hamnav">
-    <label for="hamburger">&#9776;</label>
-    <input type="checkbox" id="hamburger"/>
-    <div id="hamitems">
-      <a href="./index.html">Home</a>
-      <a href="./work.html">Work</a>
-      <a href="./about.html">About</a>
-      <a href="./contact.html">Contact</a>
-    </div>
-  </nav> -->
   <header>
     <div class="user-logo">
       <a href="./index.html">
         <img class= "logo" src="./img/BW_PersonalLogo.png" alt="personal logo">
       </a>
     </div>
-    <!-- <div class="header-sec">
-      <nav class="menu-nav-web">
-        <ul>
-          <li>
-            <a class="nav-select" href="./index.html">
-              <span class="header-menu-item">Home</span>
-            </a>
-          </li>-->
-          <!--<li>
-              <a href="./work.html">
-                <span class="header-menu-item">Work</span>
-              </a>
-          </li>-->
-          <!-- <li>
-            <a href="./about.html">
-              <span class="header-menu-item">About</span>
-            </a>
-          </li> -->
-          <!-- <li>
-            <a href="./contact.html">
-            <span class="header-menu-item">Contact</span>
-          </a>
-          </li> 
-        </ul>
-      </nav>
-    </div> -->
   </header>
   <section>
     <div class="welcome-sec">
     <div class="welcome-text">
       <h1> Hello, I'm is Sofia Ramos and I'm a multidisciplinary graphic designer! </h1>
-      <h2> I like to combine research and creativity to design visuals that communicate with purpose. My work ranges from packaging and editorial to web and motion. Take a look at some of my projects!   </h2>
     </div>
-    <!-- <div class="welcome-sec-button"> 
-      <a href="./contact.html">
-       <button class="primary-button">Contact me</button>
-      </a>
-    </div> -->
-    </div>
+      <div>
+        <div class="about-container">
+          <div class="education-card">
+            <h3>Education</h3>
+            <span>Louisiana State University, Baton Rouge</span>
+            <span>Bachelor's of Fine Arts</span>
+          </div>
+          <div class="skill-card">
+            <h3>Software Skills</h3>
+            <span>*insert icons for software</span>
+          </div>
+        </div>
+      </div>
+    </digitv>
   </section>
   <section >
-    <div class="about-sec" >
-      <div class="about-content" style="display: flex;">
-        <img src="./img/giz2.jpg" alt="" style="width: auto; margin: 0;">
-        <div style="padding-left: 50px;">
+    <div class="about-sec" style="padding: 50px;" >
+      <div class="about-content">
         <h2 style="margin-top: 0px;">About me</h2>
-        <h3> I'm graphic designer located in Texas who loves turning ideas into visuals that grab attention and communicate clearly. 
+        <p> I'm graphic designer located in Texas who loves turning ideas into visuals that grab attention and communicate clearly. 
           I’ve built experience creating magazine layouts, websites, and packaging that align with visual identities and tell compelling stories. 
           For me, everything is a story waiting to be expressed through color, shape, and line. These elements transform information into something visually readable and engaging. 
           My passion for understanding data has led me to pursue education in GIS, combining my design expertise with spatial data to explore new ways of visual storytelling. 
           I’m excited to continue to grow as a person and professional–- and I can’t wait what projects lie ahead. Take a look at my work!
-        </h3>
+        </p>
         </div>
       </div>
     </section>
-<section id="work" class="portfolio-grid">
+<section classs="work-sec" id="work" style="background-color: rgb(179, 216, 217);">
+  <div class="portfolio-grid">
+  <h2>Projects</h2>
     <div class="project-container"> 
         <div class="project-card" data-project-id="acadian-case-study">
-            <img src="img/giz2.jpg" alt="Project Acadian Kitchen Thumbnail">
-            <div class="card-overlay"><h3>Acdian Kitchens</h3>
-              <p>Packaging, website</p>
-            </div>
+            <img src="img/gizmo_4.jpg" alt="Project Acadian Kitchen Thumbnail">
+              <div class="card-header">
+                <h2 class="card-title">Acadian kitchens</h2>
+              </div>
+              <p>Packaging and Website design</p>
         </div>
-    </div>
-    <div class="project-container"> 
         <div class="project-card" data-project-id="mag-case-study">
-            <img src="img/giz2.jpg" alt="The Mag Acadian Kitchen Thumbnail">
-            <div class="card-overlay"><h3>LSU The Mag</h3>
-              <p>Editorial</p>
-            </div>
-        </div>
-    </div>
-    <div class="project-container"> 
-        <div class="project-card" data-project-id="eagle-case-study">
-            <img src="img/giz2.jpg" alt="Project Screaming Eagle Thumbnail">
-            <div class="card-overlay"><h3>Screaming Eagle</h3>
-              <p>Trade Show </p>
-            </div>
-        </div>
-    </div>
-    <div class="project-container"> 
+            <img src="img/Two_mags_Website_Thumbnail.png" alt="The Mag Acadian Kitchen Thumbnail">
+              <div class="card-header">
+                <h2 class="card-title">TheMag</h2>
+              </div>
+              <p>Editorial design</p>
+       </div>
         <div class="project-card" data-project-id="dream-case-study">
             <img src="img/giz2.jpg" alt="Project In My Dreams Thumbnail">
-            <div class="card-overlay"><h3>In my Dreams</h3>
-              <p>Animation</p>
-            </div>
+              <div class="card-header">
+                <h2 class="card-title">LSU Geology & Geophysics</h2>
+              </div>
+              <p>Event branding design</p>
         </div>
-    </div>
-    <div class="project-container"> 
         <div class="project-card" data-project-id="geo-case-study">
             <img src="img/giz2.jpg" alt="Project Geology and Geophysics Thumbnail">
-            <div class="card-overlay"><h3>LSU Geology and Geophysics</h3>
-              <p>Event Branding</p>
-            </div>
+              <div class="card-header">
+                <h2 class="card-title">In My Dreams</h2>
+              </div>
+              <p>Animation </p>
         </div>
+     </div>
     </div>
     </section>
 
@@ -160,24 +122,36 @@
       </div>
   </div>
   </footer>
-<!-- <div class="case-study-data" id="acadian-case-study">
+<div class="case-study-data" id="acadian-case-study">
     <h3>Acadian Kitchens: Packaging and Website Redesign</h3>
     <p>This section contains the full problem, solution, and impact narrative...</p>
-</div> -->
+</div>
 
 <div  id="mag-case-study" class="case-study-data"  >
     <h2>The Mag: Editorial Design</h2>
     <div style="background-color: rgb(246, 242, 254); text-align: center">
       <img src="img/Isolated_white_magazine_cover.png" alt="" style="width: 500px;">
     </div>
-    <div> 
-      <h3>About the project</h3>
-      <p>Details about the project. Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, 
-        quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. 
-        Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
-
-    </p>
-    </div>
+      <h3>Project Overview</h3>
+      <p>The Mag is a quarterly lifestyle magazine created for LSU students, featuring campus culture, stories, and local favorites. 
+        Each issue reaches about 5,000 readers across campus, plus a special edition for incoming freshmen. 
+        I collaborated with writers, photographers, and marketers to bring each publication to life, contributing to the visual design and overall layout.
+       </p>
+        <div style="display: flex;">
+          <div style="padding-right: 10px;">
+          <h3> The challenge</h3>
+          <p>Each issue had its own balance of text and visuals, and sometimes we had more copy than photography. 
+            The challenge was keeping every spread visually engaging and easy to read while staying true to the fun, student-centered tone of the magazine.
+          </p>
+          </div>
+          <div>
+          <h3>What I did </h3>
+          <p> To make the layouts more dynamic, I focused on typography, grid systems, and visual hierarchy to guide the reader’s eye. 
+            I added illustrations and photography to break up dense content and bring energy to the pages. 
+            By adjusting contrast, spacing, and rhythm throughout the design, I kept each issue consistent, approachable, and fun to flip through.
+          </p>
+          </div>
+        </div>
     <div class="mag-mockup-boc"  >
       <img src="img/BestofCampus_Flat-Cover-1.png" alt="" style="width: 100%;">
       <iframe 
